fix: switches function toList() for 'collect(Collectors.toList())', turning into a mutable ArrayList